# PRPViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.bat  configure.sh
resources/shaders/objects/: camera-center.frag  camera-center.vert  object_basic.frag  object_basic.vert  object_special.frag  object_special.vert  wireframe.frag  wireframe.vert
resources/shaders/screens/: passthrough.frag
src/: Age.cpp  Age.hpp  Config.hpp  Framebuffer.cpp  Framebuffer.hpp  Object.cpp  Object.hpp  Renderer.cpp  Renderer.hpp  main.cpp
src/helpers/: GLUtilities.cpp  GLUtilities.hpp  InterfaceUtilities.cpp  InterfaceUtilities.hpp  Logger.cpp  Logger.hpp  ProgramInfos.cpp  ProgramInfos.hpp
src/input/: Camera.cpp  Camera.hpp  Input.cpp  Joystick.cpp
src/libs/glm/detail/: dummy.cpp
src/libs/imgui/: imgui_impl_glfw_gl3.cpp
src/libs/tinyexr/: tinyexr.h
src/resources/: MeshUtilities.cpp  MeshUtilities.hpp  ResourcesManager.cpp  ResourcesManager.hpp
